fix названия папки и исправление пути Logo__image

--- a/tour-plan/index.html
+++ b/tour-plan/index.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="header-top">
                 <a href="#" class="logo">
-                    <img src="../tour plan/img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
+                    <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
                 </a>
                 <form action="#" class="search">
                     <input type="text" class="search__input" placeholder="Search Location"/>
