--- a/tour-plan/index.html
+++ b/tour-plan/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Best Tour Plan - Hotel Booking</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
                 <a href="#" class="logo">
                     <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
                 </a>
-                <form action="#" class="search">
+                <form action="#" class="search header-search">
                     <input type="text" class="search__input" placeholder="Search Location"/>
                     <button class="search__button">
                         <img src="img/search.svg" alt="Icon: search">
